# shortify

./: .env.example  .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.omc/: project-memory.json
.omc/state/: hud-state.json  hud-stdin-cache.json
admin/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
admin/src/: App.tsx  types.ts
admin/src/components/: ConfigPanel.tsx  EventsPanel.tsx  JobDetailPanel.tsx  JobsPanel.tsx  PromptsPanel.tsx  QueuePanel.tsx  StatBar.tsx  TracesPanel.tsx
admin/src/lib/: api.ts
design/: README.md
design/brand/: README.md
design/character/: README.md
design/character/cast/: README.md
design/marketing/: README.md
design/ui/: README.md
design/ui/shortify-html-design/: Shortify Character Select.html  Shortify Generating.html  Shortify Main - Wireframe.html  Shortify Main.html  Shortify TOC Select.html  shortify-character-select.jsx  shortify-generating.jsx  shortify-main-wireframe.jsx  shortify-main.jsx  shortify-toc-select.jsx
design/ui/shortify-html-design/uploads/: shortify-brand-identity-v1.1.md
docs/: getting-started.md
prompts/: conceptizer.md  scene_director.md  toc_extractor.md
scripts/: dev.sh  setup.sh
sidecar/: alembic.ini  pyproject.toml
sidecar/shortify_sidecar/: main.py  notify.py  prompts.py  settings.py
sidecar/shortify_sidecar/api/: admin.py  concepts.py  jobs.py  toc.py  upload.py
sidecar/shortify_sidecar/db/: models.py  seed.py  session.py
sidecar/shortify_sidecar/db/migrations/: env.py
sidecar/shortify_sidecar/db/migrations/versions/: 0001_initial.py  0002_prompts.py  0003_ai_traces.py
sidecar/shortify_sidecar/pipeline/: __init__.py  _gemini.py  _trace.py  alignment.py  compose.py  conceptizer.py  default.py  effects.py  image_gen.py  ingest_pdf.py  make_mask.py  narration_gen.py  overlays.py  rhythm_cut.py  scene_splitter.py  video_gen.py
sidecar/shortify_sidecar/queue/: __init__.py  base.py  sqlite_impl.py  workers.py
sidecar/shortify_sidecar/storage/: paths.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  main.rs  sidecar.rs
src/components/: ImageConceptCard.tsx  JobProgressCard.tsx  VideoPlayer.tsx
src/components/brand/: Shori.tsx  ShortifyMark.tsx  SpeechBubble.tsx
src/components/layout/: Sidebar.tsx
src/components/ui/: Btn.tsx  CharacterAvatar.tsx  Hairline.tsx  ProgressBar.tsx  StatusPill.tsx  StepIndicator.tsx  ThumbPlaceholder.tsx
src/lib/: api.ts  sse.ts  tauri.ts
src/pages/: DropView.tsx  ImageConceptPicker.tsx  JobProgressBoard.tsx  Settings.tsx  TocCheckList.tsx  VideoLibrary.tsx
src/store/: index.ts
tests/sidecar/: test_pdf_toc_split.py
wiki/: PHASE0.md  README.md  members.md
wiki/design/: 05-next-steps.md  README.md
wiki/design/brand/: 01-identity.md  02-logo.md  03-color.md  04-typography.md
wiki/design/character/: 01-bible.md  02-usage.md  03-cast.md
wiki/design/ui/: 01-principles.md  02-tokens.md  03-components.md
wiki/design/ui/screens/: 01-main.md  02-toc-select.md  03-character-select.md  04-generating.md  README.md
wiki/docs/: getting-started.md
wiki/prd/: IDEA.md  plan.md
wiki/prd/architecture/: 01-overview.md  02-frontend.md  03-sidecar.md  04-data-model.md  05-api-spec.md  06-pipeline.md  07-build-deploy.md  08-security.md  README.md
