[package]
name = "shortify"
version = "0.0.0"
description = "Turn knowledge into short-form videos for faster learning"
edition = "2021"
rust-version = "1.77"

[lib]
name = "shortify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
