[package]
name = "shortify"
version = "0.0.0"
description = "Turn knowledge into short-form videos for faster learning"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.22"
security-framework = "2.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
